# obs-studio

./: .gitattributes  .gitignore  VISION.md
docs/lenses/: benchmarks.md  licensing-and-commercialization.md  release-checklist.md
frontend/: OBSApp.cpp
frontend/cmake/: ui-components.cmake  ui-widgets.cmake
frontend/components/: LensesFocusDragHandles.cpp  LensesFocusDragHandles.hpp
frontend/utility/: lenses-main-mirror-controller.hpp  lenses-mirror-capture.hpp  platform-osx.mm  platform-windows.cpp  platform-x11.cpp  platform.hpp
frontend/widgets/: LensesMirrorWindow.cpp  LensesMirrorWindow.hpp  OBSBasic.cpp  OBSBasic.hpp  OBSBasic_MainControls.cpp  OBSBasic_Preview.cpp  OBSBasic_Projectors.cpp  OBSProjector.cpp  OBSProjector.hpp
plugins/: CMakeLists.txt
plugins/lenses/: .gitignore  CMakeLists.txt  README.md  lenses-module.c
plugins/lenses-autograde/: CMakeLists.txt  lenses-autograde-module.cpp
plugins/lenses-autograde/data/effects/: lenses-autograde-region-lut.effect
plugins/lenses-autograde/data/locale/: en-US.ini
plugins/lenses-autograde/docs/: deterministic-autograde.md
plugins/lenses-autograde/include/lenses-autograde/: analysis-runtime.hpp  autograde-filter.hpp  frontend-controller.hpp  settings-keys.hpp
plugins/lenses-autograde/src/filter/: autograde-filter.cpp
plugins/lenses-autograde/src/frontend/: frontend-controller.cpp  region-selection-dialog.cpp  region-selection-dialog.hpp
plugins/lenses-autograde/src/runtime/: analysis-runtime.cpp  deterministic-grader.cpp  deterministic-grader.hpp
plugins/lenses-autograde/src/runtime/deterministic/: analysis.cpp  analysis.hpp  color-math.hpp  lut.cpp  lut.hpp  params.cpp  params.hpp
plugins/lenses/cmake/: fix-onnxruntime-soname.sh  fix-opencv-rpath.sh
plugins/lenses/cmake/windows/: obs-module.rc.in
plugins/lenses/data/effects/: grayscale.effect  invert.effect  masked-blend.effect  solid-color.effect
plugins/lenses/data/locale/: en-GB.ini  en-US.ini
plugins/lenses/data/models/: README.md
plugins/lenses/data/models/yolo11n-seg-coco80/: class-map.json  metadata.json
plugins/lenses/data/models/yolo11s-seg-coco80/: class-map.json  metadata.json
plugins/lenses/data/presets/: default-dark-mode.json
plugins/lenses/include/lenses/: lenses-filter.h
plugins/lenses/include/lenses/ai/cloud/: cloud-mask-generator.hpp
plugins/lenses/include/lenses/ai/decode/: segmentation-decoder.hpp
plugins/lenses/include/lenses/ai/runtime/: backend-resolver.hpp  benchmark-runner.hpp  mask-generator-factory.hpp  model-descriptor.hpp  model-registry.hpp
plugins/lenses/include/lenses/ai/tracking/: bytetrack-tracker.hpp
plugins/lenses/include/lenses/core/: core-bridge.h  interfaces.hpp  noop-compositor.hpp  noop-mask-generator.hpp  registry.hpp  rule-compiler.hpp  types.hpp
plugins/lenses/include/lenses/io/: lenses-model-catalog.h  lenses-policy.h
plugins/lenses/scripts/: build-onnxruntime-macos.sh
plugins/lenses/src/ai/cloud/: cloud-mask-generator.cpp
plugins/lenses/src/ai/decode/: segmentation-decoder.cpp
plugins/lenses/src/ai/ort/: onnx-mask-generator-artifacts.cpp  onnx-mask-generator-artifacts.hpp  onnx-mask-generator-bootstrap.cpp  onnx-mask-generator-bootstrap.hpp  onnx-mask-generator-iobinding.cpp  onnx-mask-generator-iobinding.hpp  onnx-mask-generator-layout.cpp  onnx-mask-generator-layout.hpp  onnx-mask-generator-lifecycle.cpp  onnx-mask-generator-lifecycle.hpp  onnx-mask-generator-preprocess.cpp  onnx-mask-generator-preprocess.hpp  onnx-mask-generator-provider.cpp  onnx-mask-generator-provider.hpp  onnx-mask-generator-runner.cpp  onnx-mask-generator-runner.hpp  onnx-mask-generator-session-io.cpp  onnx-mask-generator-session-io.hpp  onnx-mask-generator-session.cpp  onnx-mask-generator-stats.hpp  onnx-mask-generator-submit.hpp  onnx-mask-generator-worker.cpp  onnx-mask-generator-worker.hpp  onnx-mask-generator.cpp  onnx-mask-generator.hpp
plugins/lenses/src/ai/runtime/: backend-resolver.cpp  benchmark-runner.cpp  mask-generator-factory.cpp  model-registry.cpp
plugins/lenses/src/ai/tracking/: bytetrack-tracker.cpp
plugins/lenses/src/core/: core-bridge.cpp  noop-compositor.cpp  noop-mask-generator.cpp  registry.cpp  rule-compiler.cpp
plugins/lenses/src/filter/: lenses-filter.c
plugins/lenses/src/filter/host/: lenses-filter-ai-lane.c  lenses-filter-ai-submit.c  lenses-filter-hue-presets.c  lenses-filter-hue-presets.h  lenses-filter-hue-qualifier.c  lenses-filter-hue-qualifier.h  lenses-filter-internal.h  lenses-filter-invert-component-mask.cpp  lenses-filter-invert-component-mask.h  lenses-filter-invert-region.c  lenses-filter-invert-region.h  lenses-filter-mask-shape.cpp  lenses-filter-mask-shape.h  lenses-filter-pass-setup.c  lenses-filter-policy-blend-decision.h  lenses-filter-policy-graph.c  lenses-filter-properties.c  lenses-filter-render-path.c  lenses-filter-runtime-config.c  lenses-filter-runtime-diagnostics.c  lenses-filter-sync-mask.c
plugins/lenses/src/filter/invert/: lenses-hue-qualifier.cpp  lenses-hue-qualifier.hpp  lenses-invert-hue-qualifier.h  lenses-invert-opencv-pipeline.cpp  lenses-invert-opencv-pipeline.hpp
plugins/lenses/src/filter/ui/: lenses-hue-qualifier-editor.cpp  lenses-hue-qualifier-editor.h
plugins/lenses/src/io/: lenses-model-catalog.c  lenses-model-selection.c  lenses-policy.c
plugins/lenses/src/pipeline/: lenses-pass.c  lenses-pass.h
plugins/lenses/test/: bytetrack-tracker-test.cpp  invert-opencv-pipeline-test.cpp  lenses-benchmark-module-stub.c  lenses-benchmark.cpp  lenses-model-selection-test.cpp  lenses-policy-rule-decision-test.cpp  lenses-preprocess-parity-test.cpp  lenses-runtime-soak-test.cpp  segmentation-decoder-test.cpp
plugins/mac-capture/: mac-sck-common.h  mac-sck-video-capture.m
shared/properties-view/: properties-view.cpp
tools/lenses-bench/: contract-history.sh  release-gate.sh  run-contract-v2.sh  run-coreml-coverage-audit.sh  run-fast-bench.sh  run-full-bench.sh  run-lane-bench.sh  run-runtime-bench.sh  summarize-obs-telemetry.sh
tools/lenses-models/: README.md  export_ultralytics_onnx.py  validate_model_package.py  (+2 more)
(+33 files in other folders)
